[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytruntime"
version = "0.1.0"
description = "A CLI for calculating YouTube playlist runtime statistics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ytruntime contributors" }
]
dependencies = [
  "rich>=13.7.0",
  "typer>=0.12.0",
  "yt-dlp>=2024.3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[project.scripts]
ytruntime = "ytruntime.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ytruntime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
