[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytruntime"
version = "0.1.3"
description = "A CLI for calculating YouTube playlist runtime statistics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Aditya Gaddhyan" }
]
maintainers = [
  { name = "Aditya Gaddhyan" }
]
keywords = ["youtube", "playlist", "runtime", "cli", "yt-dlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Utilities",
]
dependencies = [
  "rich>=13.7.0",
  "typer>=0.12.0",
  "yt-dlp>=2024.3.10",
]

[project.urls]
Homepage = "https://github.com/Adityagaddhyan/ytruntime"
Repository = "https://github.com/Adityagaddhyan/ytruntime"
Issues = "https://github.com/Adityagaddhyan/ytruntime/issues"
Changelog = "https://github.com/Adityagaddhyan/ytruntime/releases"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[project.scripts]
ytruntime = "ytruntime.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ytruntime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
